# AutoFuelPrice

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: fuel-price-check.yml
src/: main.rs
