[package]
name = "auto_fuel_price"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Bangchak fuel price watcher with LINE notifications"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-cron-scheduler = { version = "0.14", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
chrono-tz = "0.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
